# Alpha-ESF

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp  README.md  UserClient.cpp  UserService.cpp
data/: psi_100.txt  psi_200.txt
include/: EncSumFilter.h  HashFunctions.h  KeyStore.h  util.h
src/: EncSumFilter.cpp  HashFunctions.cpp  KeyStore.cpp  util.cpp
